# TandemGameCompanion

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Tandem.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTROLLER_SUPPORT.md  GUARDIAN_WORKER.md  SECURITY_MODEL.md  TESTING.md  UX_REQUIREMENTS.md  WINDOWS_TESTING.md  index.md  troubleshooting.md  user-guide.md
packaging/: TESTING-INSTRUCTIONS.md  Tandem.toml  package-alpha.sh
scripts/: build-windows.sh  check-project.sh  install-hooks.sh  test-windows.sh
src/: cli.rs  config.rs  error.rs  guardian.rs  launcher.rs  main.rs  platform.rs  protocol.rs
tests/: README.md  lifecycle.rs
tests/windows-smoke/: AfterTool.bat  BeforeTool.cmd  Guardian.toml  README.md  Tandem.toml  smoke-helper.c
