[package]
name = "tandem-game-companion"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Portable Windows launcher for starting a game with companion tools"
repository = "https://github.com/CyberShonk/TandemGameCompanion"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
